@@ -1,0 +1,1 @@
+/sw/share/gmt/coast
